--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<table height="100%" width="100%" cellspacing="0" cellpadding="30" border=0 align="top" class="body"><tbody><tr>
 	<td style="background-color:#E6E6FA" width="20%">
 	<nav>
-		<a href="http://eng.umd.edu"> <img src ="images/clark-school-logo.png" align="top" height="85" width="200"> </a>
+		<!-- <a href="http://eng.umd.edu"> <img src ="images/clark-school-logo.png" align="top" height="85" width="200"> </a> -->
 		<ul> 
 		<li> <a class="Menu-text" href="#"> Home </a> </li>
 		<li> <a class="Menu-text" href="pages/Research.html"> Research Interests</a> </li>
@@ -44,15 +44,18 @@
 		 width="75%" align="left" >
 			<div class="content-news">
 			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
-			<a <b> Awarded Academic Excellence Scholarship !! </a>
+			<a <b> Joined Spirent Communications Inc. as Embedded Engineer in May'18 </a>
+
+			<!-- <img src="images/bullet.png" hieght="8" width="8">&nbsp;
+			<a <b> Awarded Academic Excellence Scholarship !! </a> -->
 			
-			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
+			<!-- <img src="images/bullet.png" hieght="8" width="8">&nbsp;
 			<a href="pages/Articles.html" style="text-decoration:none;">
-				 <b> Released: Spectrum Efficiency using Full-Duplex Techniques and  Cognitive Radios </a>
+				<b> Released: Spectrum Efficiency using Full-Duplex Techniques and  Cognitive Radios </a> -->
 				 
-			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
+			<!-- <img src="images/bullet.png" hieght="8" width="8">&nbsp;
 			<a href="pages/Articles.html" style="text-decoration:none;">
-				 <b> Released: Short Note on Bluetooth </a>
+				<b> Released: Short Note on Bluetooth </a> -->
 
 			
 			</div>
@@ -73,15 +76,24 @@
 		</div>
 		
 							
-			Thank you for your interest. I have recently graduated from <a href="http://umd.edu" style="text-decoration:none;">
-			University of Maryland </a>,College Park, with a Masters in <a href="http://telecom.umd.edu/" style="text-decoration:none;">
-			Telecommunications</a>. I received my Bachelor of Technology from <a href="http://vit.ac.in/" style="text-decoration:none;">
-			VIT University</a>, Vellore, India in 2014. During my Senior Design Project I worked at 
+			Thank you for your interest. I am currently working as an Embedded Engineer at 
+			<a href="http://spirent.com" style="text-decoration:none">Spirent Communications Inc.</a> at Eatontown NJ.
+			Prior to that I have had a very fruitful learning experience at <a href="http://skylarkwireless.com/"
+			style="text-decoration:none"> Skylark Wireless LLC </a> in Houston TX. I also have a
+			short 11 month stint as a Research Project Assistant at Networks Labs,<a href="http://ece.iisc.ernet.in/"
+			style="text-decoration:none;">ECE Dept. </a>,<a href="http://iisc.ernet.in/" style="text-decoration:none;">
+			Indian Institute of Science (IISc)</a>,Bangalore, India. </br></br>
+
+
+			I graduated from <a href="http://umd.edu" style="text-decoration:none;">University of Maryland </a>,
+			College Park, with a Masters in <a href="http://telecom.umd.edu/" style="text-decoration:none;">
+			Telecommunications</a> in May 2017. I received my Bachelor of Technology from 
+			<a href="http://vit.ac.in/" style="text-decoration:none;">Vellore Institute of Technology</a>, Vellore, India in 2014.
+			During my Senior Design Project I worked at
 			<a href="http://www.drdo.gov.in/drdo/labs/CABS/English/index.jsp?pg=homebody.jsp" style="text-decoration:none;">CABS </a>,
-			<a href="http://drdo.gov.in/" style="text-decoration:none;">Defence R&D Organization (DRDO) </a>, Bangalore. Upon receiving my bachelors degree,
-			I worked as a Research Project Assistant at Networks Labs, <a href="http://ece.iisc.ernet.in/" style="text-decoration:none;">ECE Dept. </a>,
-			<a href="http://iisc.ernet.in/" style="text-decoration:none;"> Indian Institute of Science (IISc) </a>, Bangalore, India.
-		
+			<a href="http://drdo.gov.in/" style="text-decoration:none;">Defence R&D Organization (DRDO) </a>,
+			Bangalore. 			
+
 		<div class="section-headings"></br></br> Affilications </div>			
 			<ul>
 				<li>Student Member (Feb'12),<b> IEEE </b></li>
@@ -93,7 +105,11 @@
 	</section>
 	</td></tr></tbody></table>
 	<footer align="center">
-		&copy; SuryaParuchuri,2017
+		<a href="http://eng.umd.edu"> <img src ="images/clark-school-logo.png" align="top" height="85" width="200"> </a>
+		<a href="http://vit.ac.in"> <img src ="images/vit-logo.png" align="top" height="85" width="85"> </a>
+
+		</br> </br>
+		&copy; SuryaParuchuri,2018
 	</footer>
 	</div>
 </body>
