--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -22,7 +22,7 @@
 	<table height="100%" width="100%" cellspacing="0" cellpadding="30" border=0 align="top" class="body"><tbody><tr>
 	<td style="background-color:#E6E6FA" width="20%">
 	<nav>
-		<a href="http://eng.umd.edu"> <img src ="../images/clark-school-logo.png" align="top" height="85" width="200"> </a>
+		<!-- <a href="http://eng.umd.edu"> <img src ="../images/clark-school-logo.png" align="top" height="85" width="200"> </a> -->
 		<ul> 
 		<li> <a class="Menu-text" href="../index.html"> Home </a> </li>
 		<li> <a class="Menu-text" href="Research.html"> Research Interests</a> </li>
@@ -53,7 +53,7 @@
 	</section>
 	</td></tr></tbody></table>
 	<footer align="center">
-		&copy; SuryaParuchuri,2017
+		&copy; SuryaParuchuri,2018
 	</footer>
 	</div>
 </body>
