--- a/pages/Research.html
+++ b/pages/Research.html
@@ -22,7 +22,7 @@
 	<table height="100%" width="100%" cellspacing="0" cellpadding="30" border=0 align="top" class="body"><tbody><tr>
 	<td style="background-color:#E6E6FA" width="20%">
 	<nav>
-		<a href="http://eng.umd.edu"> <img src ="../images/clark-school-logo.png" align="top" height="85" width="200"> </a>
+		<!-- <a href="http://eng.umd.edu"> <img src ="../images/clark-school-logo.png" align="top" height="85" width="200"> </a> -->
 		<ul> 
 		<li> <a class="Menu-text" href="../index.html"> Home </a> </li>
 		<li> <a class="Menu-text" href="Research.html"> Research Interests</a> </li>
@@ -42,9 +42,15 @@
 		<section class= Welcome>
 		<div class = body>
 		<div class="section-headings"> Research and Professional Interests: </div>
-		<p> My research interests broadly lie at the intersection of three domains. Signal Processing, 
-		Wireless Communication Systems & Networks and Artificial Intellignece. I am also 
-		interested in sustainable technologies, and applied engineering.
+		<p> My research interests evolve with time and broadly lie at the intersection of three domains:
+		Signal Processing and Applications, Communication Systems & Networks, and Artificial Intellignece
+		and learning systems. </br></br>
+		
+		I am also picking up on my long held interest in Signal Processing applications for neuroscience 
+		and recently Electric Circuits (Thanks to my experience at Skylark Wireless) to explore the depths
+		of my brain. </br></br>
+		
+		Lastly, I am always interested in sustainable technologies, and applied engineering.
 		</p>
 		<section>
 
@@ -52,7 +58,7 @@
 	</section>
 	</td></tr></tbody></table>
 	<footer align="center">
-		&copy; SuryaParuchuri,2017
+		&copy; SuryaParuchuri,2018
 	</footer>
 	</div>
 </body>
