--- a/pages/Publications.html
+++ b/pages/Publications.html
@@ -19,10 +19,10 @@
 
 		
 	<div id="page">
-	<table height="100%" width="100%" cellspacing="0" cellpadding="30" border=0 align="justify" class="body"><tbody><tr>
+	<table height="100%" width="100%" cellspacing="0" cellpadding="30" border=0 align="top" class="body"><tbody><tr>
 	<td style="background-color:#E6E6FA" width="20%">
 	<nav>
-		<a href="http://eng.umd.edu"> <img src ="../images/clark-school-logo.png" align="justify" height="85" width="200"> </a>
+		<!-- <a href="http://eng.umd.edu"> <img src ="../images/clark-school-logo.png" align="justify" height="85" width="200"> </a> -->
 		<ul> 
 		<li> <a class="Menu-text" href="../index.html"> Home </a> </li>
 		<li> <a class="Menu-text" href="Research.html"> Research Interests</a> </li>
@@ -44,25 +44,25 @@
 		<div class = publications>
 		<ul>
 			
-			<li>E. E. Tsiropoulou, A. Thanou, <b>S.T. Paruchuri</b>, and S. Papavassiliou, &#34to appear in the proceedings of The
-			12th International Workshop on Semantic and Social Media Adaptation and Personalization (SMAP 2017)&#34,
-			Bratislava, Slovakia, July, 2017.
-			<!-- <a href="../files/publications/ciss_17.pdf" style="text-decoration:none;"> <b>here</b> </a> -->
+			<li>E. E. Tsiropoulou, A. Thanou, <b>S.T. Paruchuri</b>, and S. Papavassiliou, &#34Self-Organizing Museum
+			Visitor Communities: A Participatory Action Research based Approach&#34,<i>The 12th International Workshop 
+			on Semantic and Social Media Adaptation and Personalization (SMAP 2017)</i>,Bratislava, Slovakia, July, 2017.
+			<a href="../files/publications/smap_17.pdf" style="text-decoration:none;"> <b>here</b> </a>
 			</li> </br>
 		
 		
-			<li>E. E. Tsiropoulou, <b>S.T. Paruchuri</b>, and J.S. Baras, &#34
-			51st Conference on Information Sciences and Systems (CISS 2017)&#34, Johns Hopkins University, Baltimore,
-			MD, March, 2017.
+			<li>E. E. Tsiropoulou, <b>S.T. Paruchuri</b>, and J.S. Baras, &#34Interest, Energy and Physical-Aware
+		        Colaition formation and Resource Allocation in Smrt IoT Applications&#34,<i>51st Conference on Information
+			 Sciences and Systems (CISS 2017)</i>,Johns Hopkins University, Baltimore, MD, March, 2017.
 			<a href="../files/publications/ciss_17.pdf" style="text-decoration:none;"> <b>here</b> </a>
 			</li> </br>
 
 			<li>H. Dagale, S. V. R. Anand, M. Hegde, N. Purohit, M. K. Supreeth, G. S. Gill, 
 	      		V. Ramya, A. Shastry, S. Narasimman, Y. S. Lohith, and <b>P. Surya</b>, &#34 CyPhyS+: A 
 	      		Reliable and Managed Cyber-Physical System for Old-Age Home Healthcare over a 
-			6LoWPAN Using Wearable Motes &#34, in 2015 IEEE International Conference on Services Computing (SCC), 
-			2015, pp. 309 &#45 316.
-			<a href="../files/publications/cyphys.pdf" style="text-decoration:none;"> <b>here</b> </a>
+			6LoWPAN Using Wearable Motes &#34,<i>2015 IEEE International Conference on Services Computing (SCC)</i>, 
+			New York, June, 2015, pp. 309 &#45 316.
+			<a href="../files/publications/cyphys_15.pdf" style="text-decoration:none;"> <b>here</b> </a>
 			</li>
 			
 		<ul>
@@ -73,7 +73,7 @@
 	</section>
 	</td></tr></tbody></table>
 	<footer align="center">
-		&copy; SuryaParuchuri,2017
+		&copy; SuryaParuchuri,2018
 	</footer>
 	</div>
 </body>
