updated Wordpress reference

--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -45,7 +45,7 @@
 		<b> Surya Teja Paruchuri</b> </br>
 		email:surya at umd dot edu</br>
 		<a href="https://www.linkedin.com/in/suryatejaparuchuri" > <img src="../images/linkedin-logo.jpg" height="30" width= "30" </a>
-		<a href="https://suryatparuchuri.wordpress.com/" > <img src="../images/wordpress-logo.png" height="30" width= "30" </a>
+		<a href="http://159.65.44.44" > <img src="../images/wordpress-logo.png" height="30" width= "30" </a>
 		<a href="https://github.com/stparuchuri" > <img src="../images/github-logo.png" height="30" width= "30" </a>
 		<section>
 
