website v2.0 w/custom Blog
includes custom made blog w/ Latex support and updated CSS for better presentation

--- a/Page_Template.html
+++ b/Page_Template.html
@@ -15,13 +15,14 @@
 	<div class="LeftNavBar">
 		<table class="leftNavTable">
 			<tbody>
-				<tr class="leftNavDataCell" > <td> <a href="#"> <span>&#8226;</span> Home </a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="pages/Publications.html"> <span>&#8226;</span> Publications</a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="pages/Projects.html"> <span>&#8226;</span> Projects</a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="pages/Articles.html"> <span>&#8226;</span> Articles</a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="pages/Blog.html"> <span>&#8226;</span> Blog</a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="pages/Gallery.html"> <span>&#8226;</span> Gallery</a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="pages/Bio.html"> <span>&#8226;</span> Resume/CV</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a class="Menu-text" href="#"> <span>&#8226;</span> Home </a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a class="Menu-text" href="pages/Publications.html"> <span>&#8226;</span> Publications</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a class="Menu-text" href="pages/Projects.html"> <span>&#8226;</span> Projects</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a class="Menu-text" href="pages/Articles.html"> <span>&#8226;</span> Articles</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a class="Menu-text" href="pages/Blog.html"> <span>&#8226;</span> Blog</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a class="Menu-text" href="pages/Gallery.html"> <span>&#8226;</span> Gallery</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a class="Menu-text" href="files/CV.pdf"> <span>&#8226;</span> CV</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a class="Menu-text" href="files/Resume.pdf"> <span>&#8226;</span> Resume</a> </td> </tr>
 			</tbody>
 		</table>
 	</div>
