--- a/pages/Articles.html
+++ b/pages/Articles.html
@@ -1,87 +1,91 @@
-<!DOCTYPE HTML>
+<!DOCTYPE PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
-<html>
+<html>	
+<!-- HEAD -->
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>	Surya Paruchuri	</title>	
+	<link rel="stylesheet" type="text/css" media="screen" href="../css/screen.css">
+</head>
 	
-	<head>
-
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<title>	Surya Paruchuri	</title>
-	
-		<link rel="stylesheet" type="text/css" media="screen" href="../css/screen.css">
-	</head>
-	
-
-<BODY>
-
-
-		
-	<div id="page">
-	<table height="100%" width="100%" cellspacing="0" cellpadding="30" border=0 align="top" class="body"><tbody><tr>
-	<td style="background-color:#E6E6FA" width="20%">
-	<nav>
-		<!-- <a href="http://eng.umd.edu"> <img src ="../images/clark-school-logo.png" align="justify" height="85" width="200"> </a> -->
-		<ul> 
-		<li> <a class="Menu-text" href="../index.html"> Home </a> </li>
-		<li> <a class="Menu-text" href="Research.html"> Research Interests</a> </li>
-		<li> <a class="Menu-text" href="Publications.html"> Publications</a> </li>
-		<li> <a class="Menu-text" href="Projects.html"> Projects</a> </li>
-		<li> <a class="Menu-text" href="Articles.html"> Articles</a> </li>
-		<li> <a class="Menu-text" href="Gallery.html"> Gallery</a> </li>
-		<li> <a class="Menu-text" href="../files/CV.pdf"> CV</a> </li>
-		<li> <a class="Menu-text" href="../files/Resume.pdf"> Resume</a> </li>
-		<li> <a class="Menu-text" href="Contact.html"> Contact</a> </li>
-		</ul>
-	</nav>
-	</td>
-	<td>
-	<section class="body">
-		
-		<section class= Welcome>
-		<div class = "section-headings"> Articles </div>
-		<ul>
-
-			<li>Spectrum Efficiency: Using Full Duplex Techniques and Cognitive Radios can be found 
-			<a href="../files/articles/scholarly_paper_IEEE.pdf" style="text-decoration:none;"> here </a>
-			</li>
-			<li>A Brief Note on Bluetooth Technology detailing basic concepts can be found 
-			<a href="../files/articles/bluetooth.pdf" style="text-decoration:none;"> here </a>
-			</li>
-			<li>A brief survey paper on WSN usuage for flood detection and forecasting can be found 
-			<a href="../files/articles/flood_forecasting_wsn.pdf" style="text-decoration:none;"> here </a>
-			</li>
-		</ul>
-		<div class="section-headings"> </br> </br> Some Useful Notes </div>
-		<ul>
-			<li> Notes on 802.11: from ENTS689 Lectures at University of Maryland, College Park.
-			<a href="../files/articles/notes/notes_802_11_ents_course.pdf" style="text-decoration:none;"><b> here</b> </a>.
-			</li>
-			<li> Notes on Digital Communications from NPTEL lectures.
-			<a href="../files/articles/notes/notes_Digital_Communications_NPTEL.pdf" style="text-decoration:none;"><b> here</b> </a>.
-			</li>
-	
-		</ul>		
-		
-		<div class = "section-headings"> </br> </br> Misc.(Fun Facts) </div>
-		<ul>
-			<li> History of ECE Department, university of Maryland as described a professor.
-			<a href="../files/articles/misc/umdeehistory.pdf" style="text-decoration:none;"><b> here</b> </a>.
-			</li>
-			
-		</ul>
-		<section>
-
-
-	</section>
-	</td></tr></tbody></table>
-	<footer align="center">
-		&copy; SuryaParuchuri,2018
-	</footer>
+<!-- BODY -->
+<body>
+	<!-- LEFT NAVIGATION BAR --->
+	<div class="LeftNavBar">
+		<table class="leftNavTable">
+			<tbody>
+				<tr class="leftNavDataCell" > <td> <a href="../index.html"> <span>&#8226;</span> Home </a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Publications.html"> <span>&#8226;</span> Publications</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Projects.html"> <span>&#8226;</span> Projects</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="#"> <span>&#8226;</span> Articles</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Blog.html"> <span>&#8226;</span> Blog</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Gallery.html"> <span>&#8226;</span> Gallery</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Bio.html"> <span>&#8226;</span> Resume/CV</a> </td> </tr>				
+			</tbody>
+		</table>
 	</div>
+	
+	<!-- RIGHT BODY/CONTENT --->
+	<div class="ContentDiv">
+		<!-- ARTICLES -->
+		<div class="articlesTypeContainer">
+			<p class="sectionHeadings"> Articles </p>
+			<ul class="articlesList">
+				<li>Spectrum Efficiency: Using Full Duplex Techniques and Cognitive Radios can be found 
+				<a href="../files/articles/scholarly_paper_IEEE.pdf" style="text-decoration:none;"> here </a>
+				</li>
+				<li>A Brief Note on Bluetooth Technology detailing basic concepts can be found 
+				<a href="../files/articles/bluetooth.pdf" style="text-decoration:none;"> here </a>
+				</li>
+				<li>A brief survey paper on WSN usuage for flood detection and forecasting can be found 
+				<a href="../files/articles/flood_forecasting_wsn.pdf" style="text-decoration:none;"> here </a>
+				</li>
+			</ul>
+		</div>
+		
+		<!-- NOTES -->
+		<div class="articlesTypeContainer">
+			<p class="sectionHeadings"> Notes </p>
+			<ul class="articlesList">
+				<li> Notes on 802.11: from ENTS689 Lectures at University of Maryland, College Park.
+				<a href="../files/articles/notes/notes_802_11_ents_course.pdf" style="text-decoration:none;"><b> here</b> </a>.
+				</li>
+				<li> Notes on Digital Communications from NPTEL lectures.
+				<a href="../files/articles/notes/notes_Digital_Communications_NPTEL.pdf" style="text-decoration:none;"><b> here</b> </a>.
+			</li>	
+		</ul>
+		</div>
+		
+		<!-- MISC. -->
+		<div class="articlesTypeContainer">
+			<p class="sectionHeadings"> Misc. </p>
+			<ul class="articlesList">
+				<li> History of ECE Department, university of Maryland as described a professor.
+				<a href="../files/articles/misc/umdeehistory.pdf" style="text-decoration:none;"><b> here</b> </a>.
+				</li>			
+			</ul>
+		</div>
+		
+	</div>
+	
+	<!-- FOOTER -->
+	<footer>
+		<p>
+			&copy; SuryaParuchuri,  <script>document.write(new Date().getFullYear())</script>. 			
+			Page updated on <script>document.write(document.lastModified) </script>
+			
+			<!-- Back to Top & SCRIPT -->
+			<button class="button" onclick="topFunction()" title="Go to top">Back to Top</button>
+			<script>
+				// When the user clicks on the button, scroll to the top of the document
+				function topFunction() {
+					document.body.scrollTop = 0; // For Safari
+					document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+				}
+			</script>
+		</p>
+	</footer>
+	
 </body>
-
-
-
 </html>
