--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -1,175 +1,185 @@
-<!DOCTYPE HTML>
+<!DOCTYPE PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 
-<html>
+<html>	
+<!-- HEAD -->
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>	Surya Paruchuri	</title>	
+	<link rel="stylesheet" type="text/css" media="screen" href="../css/screen.css">
+</head>
 	
-	<head>
-
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<title>	Surya Paruchuri	</title>
-	
-		<link rel="stylesheet" type="text/css" media="screen" href="../css/screen.css">
-	</head>
-	
-
-<BODY>
-
-
-		
-	<div id="page">
-	<table height="100%" width="100%" cellspacing="0" cellpadding="30" border=0 align="top" class="body"><tbody><tr>
-	<td style="background-color:#E6E6FA" width="20%">
-	<nav>
-		<!-- <a href="http://eng.umd.edu"> <img src ="../images/clark-school-logo.png" align="justify" height="85" width="200"> </a> -->
-		<ul> 
-		<li> <a class="Menu-text" href="../index.html"> Home </a> </li>
-		<li> <a class="Menu-text" href="Research.html"> Research Interests</a> </li>
-		<li> <a class="Menu-text" href="Publications.html"> Publications</a> </li>
-		<li> <a class="Menu-text" href="Projects.html"> Projects</a> </li>
-		<li> <a class="Menu-text" href="Articles.html"> Articles</a> </li>
-		<li> <a class="Menu-text" href="Gallery.html"> Gallery</a> </li>
-		<li> <a class="Menu-text" href="../files/CV.pdf"> CV</a> </li>
-		<li> <a class="Menu-text" href="../files/Resume.pdf"> Resume</a> </li>
-		<li> <a class="Menu-text" href="Contact.html"> Contact</a> </li>
-		</ul>
-	</nav>
-	</td>
-	<td>
-	<section class="body">
-		
-		<section class= Welcome >
-		<i> Please contact me for the codes and reports regarding the projects. </i> </br> </br>		
-		
-		<div class ="section-headings"> Professional Projects </div>
-		<div class = project>
-		<table> 
-		<colgroup> 
-		<col style="width:75%" align="left">
-		<col style="width:20%" align="right">
-		</colgroup>
-		<tbody>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				6LoWPAN based Cyber Physical System for remote health monitoring, Indian Institute of Science
-			</td>
-			<td> June,2014 &#45 May, 2015.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				Radar Target Simulator, Defence Research & Development Organization.
-			</td>
-			<td> January &#45 May,2014.</td>
-		</tr>
-		</tbody></table>
-		</div>
-
-		<div class="section-headings"> </br> </br> Academic projects </div>
-		<div class = project>
-		<table> 
-		<colgroup> 
-		<col style="width:75%" align="left">
-		<col style="width:20%" align="right">
-		</colgroup>
-		<tbody>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				Extending Texas Instruments RTOS ,University of Maryland
-			</td>
-			<td> April, 2017.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				RTOS Scheduler Simulations ,University of Maryland
-			</td>
-			<td> March, 2017.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				CD2DAT Application,University of Maryland
-			</td>
-			<td> February, 2017.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				Modelled LTE Downlink system with Rayleigh fading channel,University of Maryland
-			</td>
-			<td> April, 2016.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				UDP based Network Application, University of Maryland
-			</td>
-			<td> November, 2015.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				AWS/PCS System Deployment, University of Maryland
-			</td>
-			<td> October &#45 December, 2015.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				A Number Plate Recognition Algorithm, VIT University
-			</td>
-			<td> March &#45 May, 2013.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				Supression of non-stationary noise in voice signals using kalaman filter,
-				VIT University
-			</td>
-			<td> July &#45 October, 2012.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				Designing a DualBand Wilkinson Power Divider, VIT University
-			</td>
-			<td> March &#45 April, 2013.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				Designing a rectangular Patch Antenna, VIT University
-			</td>
-			<td> October &#45 November, 2012.</td>
-		</tr>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				System-on-Chip Design of Frequency Translation Circuit, VIT University
-			</td>
-			<td> May &#45 June, 2012.</td>
-		</tr>
-		</tbody></table>
-		</div>
-
-		<!-- <div class ="section-headings"> </br> </br> Personal Projects </div>
-		<div class = project>
-		<table> 
-		<colgroup> 
-		<col style="width:75%" align="left">
-		<col style="width:20%" align="right">
-		</colgroup>
-		<tbody>
-		<tr> 
-			<td> 	<img src = "../images/bullet.png" height="10" width="10">
-				Effects of spreading on sinusidal/cosinusoidal harmonics, University of Maryland
-			</td>
-			<td> Present.</td>
-		</tr>
-		</tbody></table>
-		</div> -->
-		<section>
-
-
-	</section>
-	</td></tr></tbody></table>
-	<footer align="center">
-		&copy; SuryaParuchuri,2018
-	</footer>
+<!-- BODY -->
+<body>
+	<!-- LEFT NAVIGATION BAR --->
+	<div class="LeftNavBar">
+		<table class="leftNavTable">
+			<tbody>
+				<tr class="leftNavDataCell" > <td> <a href="../index.html"> <span>&#8226;</span> Home </a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Publications.html"> <span>&#8226;</span> Publications</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="#"> <span>&#8226;</span> Projects</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Articles.html"> <span>&#8226;</span> Articles</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Blog.html"> <span>&#8226;</span> Blog</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Gallery.html"> <span>&#8226;</span> Gallery</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Bio.html"> <span>&#8226;</span> Resume/CV</a> </td> </tr>
+			</tbody>
+		</table>
 	</div>
+	
+	<!-- RIGHT BODY/CONTENT --->
+	<div class="ContentDiv">
+
+		<!-- PRROFESSIONAL PROJECTS -->
+		<div class="projectsTypeContainer">
+			<p class="sectionHeadings"> Professional Projects</p>
+			<table class="projects"> 
+				<colgroup> 
+				<col style="width:55%" align="left">
+				<col style="width:15%" align="center">
+				<col style="width:20%" align="right">
+				</colgroup>
+				<tbody>
+					<tr> 
+						<td> 	
+							<img src = "../images/bullet.png" height="10" width="10">
+							6LoWPAN based Cyber Physical System for remote health monitoring
+						</td>
+						<td> IISc, Bengaluru</td>
+						<td> June'14 &#45 May'15.</td>
+					</tr>
+					<tr> 
+						<td>
+							<img src = "../images/bullet.png" height="10" width="10">
+							Radar Target Simulator
+						</td>
+						<td>  DRDO, Bengaluru </td>
+						<td> Jan &#45 May'14.</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		
+		<!-- ACADEMIC PROJECTS -->
+		<div class="projectsTypeContainer">
+		<p class="sectionHeadings"> Academic Projects </p>
+			<table class="projects"> 
+				<colgroup> 
+				<col style="width:55%" align="left">
+				<col style="width:15%" align="center">
+				<col style="width:20%" align="right">
+				</colgroup>
+				<tbody>
+						<tr> 
+							<td> 	
+								<img src = "../images/bullet.png" height="10" width="10">
+								Extending Texas Instruments RTOS
+							</td>
+							<td> UMD </td>
+							<td> April, 2017.</td>
+						</tr>
+						<tr> 
+							<td>
+								<img src = "../images/bullet.png" height="10" width="10">
+								RTOS Scheduler Simulations
+							</td>
+							<td> UMD </td>
+							<td> March, 2017.</td>
+						</tr>
+						<tr> 
+							<td> 	
+								<img src = "../images/bullet.png" height="10" width="10">
+								CD2DAT Application
+							</td>
+							<td> UMD </td>
+							<td> February, 2017.</td>
+						</tr>
+						<tr> 
+							<td> 	
+								<img src = "../images/bullet.png" height="10" width="10">
+								Modelled LTE Downlink system with Rayleigh fading channel
+							</td>
+							<td> UMD </td>
+							<td> April, 2016.</td>
+						</tr>
+						<tr> 
+							<td> 	
+								<img src = "../images/bullet.png" height="10" width="10">
+								UDP based Network Application
+							</td>
+							<td> UMD </td>
+							<td> November, 2015.</td>
+						</tr>
+						<tr> 
+							<td> 	
+								<img src = "../images/bullet.png" height="10" width="10">
+								AWS/PCS System Deployment
+							</td>
+							<td> UMD </td>
+							<td> October &#45 December, 2015.</td>
+						</tr>
+						<tr> 
+							<td> 	
+								<img src = "../images/bullet.png" height="10" width="10">
+								A Number Plate Recognition Algorithm
+							</td>
+							<td> VIT </td>
+							<td> March &#45 May, 2013.</td>
+						</tr>
+						<tr> 
+							<td>
+								<img src = "../images/bullet.png" height="10" width="10">
+								Supression of non-stationary noise in voice signals using kalaman filter							
+							</td>
+							<td> VIT </td>
+							<td> July &#45 October, 2012.</td>
+						</tr>
+						<tr> 
+							<td>
+								<img src = "../images/bullet.png" height="10" width="10">
+								Designing a DualBand Wilkinson Power Divider
+							</td>
+							<td> VIT </td>
+							<td> March &#45 April, 2013.</td>
+						</tr>
+						<tr> 
+							<td>
+								<img src = "../images/bullet.png" height="10" width="10">
+								Designing a rectangular Patch Antenna
+							</td>
+							<td> VIT </td>
+							<td> October &#45 November, 2012.</td>
+						</tr>
+						<tr> 
+							<td>
+								<img src = "../images/bullet.png" height="10" width="10">
+								System-on-Chip Design of Frequency Translation Circuit
+							</td>
+							<td> VIT </td>
+							<td> May &#45 June, 2012.</td>
+						</tr>
+				</tbody>
+			</table>
+		</div>
+		
+	</div>
+	
+	<!-- FOOTER -->
+	<footer>
+		<p>
+			&copy; SuryaParuchuri,  <script>document.write(new Date().getFullYear())</script>. 			
+			Page updated on <script>document.write(document.lastModified) </script>
+			
+			<!-- Back to Top & SCRIPT -->
+			<button class="button" onclick="topFunction()" title="Go to top">Back to Top</button>
+			<script>
+				// When the user clicks on the button, scroll to the top of the document
+				function topFunction() {
+					document.body.scrollTop = 0; // For Safari
+					document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+				}
+			</script>
+		</p>
+	</footer>
+	
 </body>
-
-
-
 </html>
