update blog post 2-proof

--- a/techBlog/2/phaseOfNSinusoids.html
+++ b/techBlog/2/phaseOfNSinusoids.html
@@ -32,13 +32,13 @@ Note: this post was originally posted on my wordpress based
 blog on September 23 2018. This was later moved to this
 custom blog on the above date.
 </p>
-<p class="blogSubSection"> Proof for the case when $$ \alpha_i \ll 1 \text{in radians} $$. </p>
+<p class="blogSubSection"> Proof(Part-1) </p>
 <p class="blogContent">
-	I am trying to prove that the above equation holds up by parts. In this section, we try to prove that the above equation holds true for the case when $$ \alpha_i \ll 1 $$.</br></br>
+	I am trying to prove that the above equation holds up by parts. In this section, we try to prove that the above equation holds true for the case when $$ \alpha_i \ll 1 $$</br></br>
 
-	We know that, for $$ x \ll 1 \text{ i.e, very very small x, }  sin(x) \approx x $$. Similarly, for $$ x \ll 1 \text{ very very small x, } cos(x) \approx 1 $$. Thus, the numerator of 
-	$$ tan^{-1}\lbrace\dfrac{sin \alpha_1 + sin \alpha_2 + \dots }{cos \alpha_1 + cos \alpha_2 + \dots }\rbrace = \dfrac{\sum_i \alpha_i}{n}$$ would get simplified to $$ \sum_{i}\alpha_i$$ and the denominator is simply 'n' when the series is a summation of 'n' terms. Thus the we have
-	$$ tan^{-1}\lbrace\dfrac{sin \alpha_1 + sin \alpha_2 + \dots }{cos \alpha_1 + cos \alpha_2 + \dots }\rbrace = tan^{-1}\dfrac{\sum_i \alpha_i}{n}$$.
-	
+	We know that, for $$ x \ll 1 \text{, i.e, very very small x, }  sin(x) \approx x $$
+	$$ x \ll 1 \text{, i.e, very very small x, } cos(x) \approx 1 $$
+	Thus, by simplifying we get,  
+	$$ tan^{-1}\lbrace\dfrac{sin \alpha_1 + sin \alpha_2 + \dots }{cos \alpha_1 + cos \alpha_2 + \dots }\rbrace = tan^{-1} \lbrace \dfrac{\sum_i \alpha_i}{n} \rbrace$$	
 </p>
 <p class="blogTimeStamp"> Monday August 19 2019 </p>
