--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -73,7 +73,7 @@
 	</div>
 	
 	<!-- FOOTER -->
-	<footer>
+	<footer class="footer">
 		<p>
 			&copy; SuryaParuchuri,  <script>document.write(new Date().getFullYear())</script>. 			
 			Page updated on <script>document.write(document.lastModified) </script>
