Update Homepage's minor details and add corrections.

--- a/index.html
+++ b/index.html
@@ -56,28 +56,14 @@
 			Welcome 
 		</p>
 		<p class="content">
-			Hi, I am Surya Paruchuri. I am currently working as an Embedded Engineer with Spirent Communications at 
-			Eatontown NJ. This site for about me and my about projects, notes, articles and some other fun 
-			techincal stuff. </br> </br>
+			Hi,</br> </br>
+			I am Surya Paruchuri and I am an engineer. This site is about me and my about projects, notes, views,
+			articles and some other fun techincal stuff.</br> </br>
 			
-			<!--
-			I am currently working as an Embedded Engineer at 
-			<a href="http://spirent.com" style="text-decoration:none">Spirent Communications Inc.</a> at Eatontown NJ.
-			Prior to that I have had a very fruitful learning experience at <a href="http://skylarkwireless.com/"
-			style="text-decoration:none"> Skylark Wireless LLC </a> in Houston TX. I also have a
-			short 11 month stint as a Research Project Assistant at Networks Labs,<a href="http://ece.iisc.ernet.in/"
-			style="text-decoration:none;">ECE Dept. </a>,<a href="http://iisc.ernet.in/" style="text-decoration:none;">
-			Indian Institute of Science (IISc)</a>,Bangalore, India. </br></br>
+			As for my professional work,I am currently working as an Modem Engineer. Simply put, I currently write 
+			code that makes your phone access internet.
+			 </br> </br>
 
-
-			I graduated from <a href="http://umd.edu" style="text-decoration:none;">University of Maryland </a>,
-			College Park, with a Masters in <a href="http://telecom.umd.edu/" style="text-decoration:none;">
-			Telecommunications</a> in May 2017. I received my Bachelor of Technology from 
-			<a href="http://vit.ac.in/" style="text-decoration:none;">Vellore Institute of Technology</a>, Vellore, India in 2014.
-			During my Senior Design Project I worked at
-			<a href="http://www.drdo.gov.in/drdo/labs/CABS/English/index.jsp?pg=homebody.jsp" style="text-decoration:none;">CABS </a>,
-			<a href="http://drdo.gov.in/" style="text-decoration:none;">Defence R&D Organization (DRDO) </a>,
-			Bangalore. </br> </br> -->
 		</p>
 		<p class="content">
 			My professional and research interests evolve over time. But mostly my work revolves around:
@@ -88,16 +74,13 @@
 				<li> Applied Mathematics & Engineering </li>
 			</ul>
 		</p>
-		<p class="content">
-			Currently I am working on OTFS signal respresentation Systems.
-		</p>
 		
 		<!-- NEWS -->
 		<div class="news">
 			<p class="sectionHeadings"> News </p>
 			
 			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
-			<a <b> Joined Spirent Communications Inc. as Embedded Engineer in May'18 </a>
+			<a <b> Moved to Qualcomm Technologies Inc. as Modem Engineer in August'20 </a>
 			
 		</div>
 		
