update: news and intersts

--- a/index.html
+++ b/index.html
@@ -66,18 +66,29 @@
 
 		</p>
 		<p class="content">
-			My professional and research interests evolve over time. But mostly my work revolves around:
+			My professional and research interests evolved over time. But mostly my work revolves around:
 			<ul class="researchIntersts">
-				<li> Signal Processing Systems	</li>
-				<li> Communications Systems	& Information representation</li>
-				<li> Neuroscience, Cognitive Systems </li>
-				<li> Applied Mathematics & Engineering </li>
+				<li> Signal Processing Systems	- Sensing and Communications</li>
+				<li> Computer Architecture - High Performance/throughput Systems (DSPs, GPUs etc) </li>
+			</ul>
+		</p>
+		
+		
+		<p class="content">
+			On a side note I am also quite liking the below areas, as I dig deeper into these:
+			<ul class="researchIntersts">			
+				<li> Applied Mathematics (Algorithms) & General Engineering </li>
+				<li> Neuroscience, Cognitive Systems & Information representation (in humans and robotics)</li>
+				<li> Computational Finance (at a personal level) <li>
 			</ul>
 		</p>
 		
 		<!-- NEWS -->
 		<div class="news">
 			<p class="sectionHeadings"> News </p>
+
+			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
+			<a <b> Moved to NXP USA Inc. as Senior System Design Engineer in May'22 </a>
 			
 			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
 			<a <b> Moved to Qualcomm Technologies Inc. as Modem Engineer in August'20 </a>
