fix: bio and list bullets on landing page

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
 			I am Surya Paruchuri and I am an engineer. This site is about me and my about projects, notes, views,
 			articles and some other fun techincal stuff.</br> </br>
 			
-			As for my professional work,I am currently working as an Modem Engineer. Simply put, I currently write 
-			code that makes your phone access internet.
+			As for my professional work,I am currently working as a Design Engineer designing UWM Modems. 
+			In recent past, I worked as Modem Engineer at Qualcomm. Simply put, I currently wrote 
+			code that made your phone access internet.
 			 </br> </br>
 
 		</p>
@@ -79,7 +80,7 @@
 			<ul class="researchIntersts">			
 				<li> Applied Mathematics (Algorithms) & General Engineering </li>
 				<li> Neuroscience, Cognitive Systems & Information representation (in humans and robotics)</li>
-				<li> Computational Finance (at a personal level) <li>
+				<li> Computational Finance (at a personal level) </li>
 			</ul>
 		</p>
 		
