--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			I am Surya Paruchuri and I am an engineer. This site is about me and my about projects, notes, views,
 			articles and some other fun techincal stuff.</br> </br>
 			
-			As for my professional work,I am currently working as a Design Engineer designing UWM Modems. 
+			As for my professional work,I am currently working as a Design Engineer designing UWB Modems. 
 			In recent past, I worked as Modem Engineer at Qualcomm. Simply put, I currently wrote 
 			code that made your phone access internet.
 			 </br> </br>
@@ -76,7 +76,7 @@
 		
 		
 		<p class="content">
-			On a side note I am also quite liking the below areas, as I dig deeper into these:
+			On a side note I am also quite like the below areas, as I dig deeper into these:
 			<ul class="researchIntersts">			
 				<li> Applied Mathematics (Algorithms) & General Engineering </li>
 				<li> Neuroscience, Cognitive Systems & Information representation (in humans and robotics)</li>
@@ -89,7 +89,7 @@
 			<p class="sectionHeadings"> News </p>
 
 			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
-			<a <b> Moved to NXP USA Inc. as Senior System Design Engineer in May'22 </a>
+			<a <b> Moved to NXP USA Inc. as Senior System Design Engineer in May'22 </a> </br>
 			
 			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
 			<a <b> Moved to Qualcomm Technologies Inc. as Modem Engineer in August'20 </a>
