--- a/index.html
+++ b/index.html
@@ -92,7 +92,21 @@
 			<a <b> Moved to NXP USA Inc. as Senior System Design Engineer in May'22 </a> </br>
 			
 			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
-			<a <b> Moved to Qualcomm Technologies Inc. as Modem Engineer in August'20 </a>
+			<a <b> Moved to Qualcomm Technologies Inc. as Modem Engineer in August'20 </a> </br>
+			
+			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
+			<a <b> Promoted to Senior Engineer at Spirent Communications Inc starting January'20 </a> </br>
+			
+			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
+			<a <b> Joined as Embedded Engineer at Spirent Communications Inc in May'18 (First full-time Job in USA !!)</a> </br>
+			
+			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
+			<a <b> Our Paper titled "Self-organizing Museum Visitor Communities: A Participatory Action Research 
+			based Approach" is Accepted and Published at SMAP 2017, Slavakia.</a> </br>
+			
+			<img src="images/bullet.png" hieght="8" width="8">&nbsp;
+			<a <b> Our Paper titled "Interest, Energy and Physical-Aware Coalitions Formation and 
+			Resource Allocation in Smart IoT Applications" is Accepted and Published at CISS 2017, JHU, Baltimore.</a>
 			
 		</div>
 		
